--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^4.10.1",
+    "tailwindcss": "^3.2.6",
+    "tailwind-scrollbar": "^2.1.0"
   }
 }
